Adding additional information for developers and cleanup up the DEV tasks.